--- a/pom.xml
+++ b/pom.xml
@@ -65,32 +65,32 @@
 		</plugins>
 	</build>
 
-<!--	<profiles>-->
-<!--		<profile>-->
-<!--			<id>production</id>-->
-<!--			<build>-->
-<!--				<plugins>-->
-<!--					<plugin>-->
-<!--						<groupId>com.vaadin</groupId>-->
-<!--						<artifactId>vaadin-bom</artifactId>-->
-<!--						<version>${vaadin.version}</version>-->
-<!--						<executions>-->
-<!--							<execution>-->
-<!--								<id>frontend</id>-->
-<!--								<phase>compile</phase>-->
-<!--								<goals>-->
-<!--									<goal>prepare-frontend</goal>-->
-<!--									<goal>build-frontend</goal>-->
-<!--								</goals>-->
-<!--								<configuration>-->
-<!--									<productionMode>true</productionMode>-->
-<!--								</configuration>-->
-<!--							</execution>-->
-<!--						</executions>-->
-<!--					</plugin>-->
-<!--				</plugins>-->
-<!--			</build>-->
-<!--		</profile>-->
-<!--	</profiles>-->
+	<profiles>
+		<profile>
+			<id>production</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>com.vaadin</groupId>
+						<artifactId>vaadin-bom</artifactId>
+						<version>${vaadin.version}</version>
+						<executions>
+							<execution>
+								<id>frontend</id>
+								<phase>compile</phase>
+								<goals>
+									<goal>prepare-frontend</goal>
+									<goal>build-frontend</goal>
+								</goals>
+								<configuration>
+									<productionMode>true</productionMode>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 
 </project>
